# mipt-cpp-course

./: README.md
docs/sem1/: README.md
docs/sem10/: README.md
docs/sem11/: README.md
docs/sem2/: README.md
docs/sem3/: README.md
docs/sem4/: README.md
docs/sem5/: README.md
docs/sem6/: README.md
docs/sem8/: README.md
docs/sem9/: README.md
samples/sem1/: example1.cpp  example1_smart.cpp  example2.cpp  example2_v.cpp  example3.cpp  example4.cpp  term.cpp
samples/sem13/: maybe.cpp  union.cpp  variant.cpp
samples/sem2/: ex1.cpp  ex2.cpp  find.cpp  find_if.cpp  find_if_sem.cpp  rangebasedfor.cpp  remove.cpp  remove_sem.cpp
samples/sem3/: dist.cpp  inserter.cpp  iter.cpp  vector_iterator.cpp  vp.cpp
samples/sem4/: extent.cpp  file.cpp  istream_iterator.cpp  sizeof.cpp  ss.cpp  try.cpp
samples/sem5/: bit.cpp  constr_array.cpp  lru.cpp
samples/sem6/: iota.cpp  transform_if.cpp  view.cpp
samples/sem9/: add_name.cpp  f.cpp  main.cpp  rr.cpp
tasks/: CMakeLists.txt  README.md
tasks/task1/: CMakeLists.txt  README.md  adapter.hpp  some_library.hpp  task1.cpp
tasks/task2/: CMakeLists.txt  README.md  task2.cpp  transform.hpp
tasks/task3/: CMakeLists.txt  README.md  indexed_iterator.hpp  task3.cpp
tasks/task4/: CMakeLists.txt  README.md  allocator.hpp  task4.cpp
